--- a/TCC_NDVI_predict.ipynb
+++ b/TCC_NDVI_predict.ipynb
@@ -15,7 +15,7 @@
       ],
       "toc_visible": true,
       "mount_file_id": "1-J0q7mge7WAS9_HcwY4QfHfCB2IhxWxA",
-      "authorship_tag": "ABX9TyNlbgg6Po8RYKZYE/uQD41d",
+      "authorship_tag": "ABX9TyMuMVzy9dRcMGfD1kdjWqND",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1811,100 +1811,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EIIUR5xA0sTm",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 250
-        },
-        "outputId": "5194675e-36d1-4a08-b453-521508518bf3"
+        "id": "EIIUR5xA0sTm"
       },
       "source": [
         "p1_dataframeModis.reset_index(inplace=True)\n",
         "p1_dataframeModis['rec']=0\n",
-        "p1_dataframeModis.columns=[\"date\",\"NDVI\",\"rec\"]\n",
-        "p1_dataframeModis.head(2)\n"
+        "p1_dataframeModis.columns=[\"date\",\"NDVI\",\"rec\"]"
       ],
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: SettingWithCopyWarning:\n",
-            "\n",
-            "\n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>date</th>\n",
-              "      <th>NDVI</th>\n",
-              "      <th>rec</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>2009-01-01</td>\n",
-              "      <td>0.69236</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2009-01-17</td>\n",
-              "      <td>0.70363</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "        date     NDVI  rec\n",
-              "0 2009-01-01  0.69236    0\n",
-              "1 2009-01-17  0.70363    0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 52
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7CNqlH4i3Vef",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c6043245-9638-485f-bfd6-85e8c82f42ee"
+        "id": "7CNqlH4i3Vef"
       },
       "source": [
         "#Contando dias entre as imagens\n",
@@ -1913,29 +1833,8 @@
         "  p1_dataframeModis['rec'][i]=(p1_dataframeModis['date'][i]-p1_dataframeModis['date'][i-1]).days\n",
         "  i += 1"
       ],
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:4: SettingWithCopyWarning:\n",
-            "\n",
-            "\n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "\n",
-            "/usr/local/lib/python3.7/dist-packages/IPython/core/interactiveshell.py:2882: SettingWithCopyWarning:\n",
-            "\n",
-            "\n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
